# aggregator-v1

./: .gitignore  .prettierignore  Anchor.toml  package-lock.json  package.json
programs/aggregator-v1/: Cargo.toml
programs/aggregator-v1/src/: constants.rs  cpi.rs  error.rs  lib.rs
programs/aggregator-v1/src/instructions/: mod.rs
programs/aggregator-v1/src/instructions/aggregator/: README.md  extend_map.rs  initialize_group.rs  initialize_map.rs  initialize_token.rs  map_extend_lookup_table.rs  mod.rs
programs/aggregator-v1/src/instructions/drift/: initialize_vault.rs  mod.rs
programs/aggregator-v1/src/instructions/user/: initialize_user.rs  mod.rs
programs/aggregator-v1/src/state/: aggregator.rs  lending_program.rs  mod.rs  program.rs  user.rs  wrapped_number.rs
programs/aggregator-v1/src/validation/: lending_program.rs  mod.rs
programs/drift/: Cargo.toml
programs/drift/src/: lib.rs
sdk/: package-lock.json  package.json
sdk/src/: adminClient.ts  client.ts  config.ts  index.ts  type.ts
sdk/src/address/: aggregator.ts  drift.ts
sdk/src/idl/: aggregator_v1.json
sdk/src/types/: aggregator_v1.ts
test-scripts/: run-all-test.sh  run-single-test.sh  solana-local-validator.sh
tests/: address-lookup-test.ts  aggregator-v1.ts  before.ts  constants.ts  helper.ts  test.ts
tests/aggregator/: initialize-group.ts  initialize-map.ts  initialize-token.ts
tests/drift/: initialize-vault.ts
tests/user/: initialize-user.ts
validator/account/: SOL-PYTH.json  USDC-PYTH.json  program-lut.json
