[package]
name = "aggregator-v1"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aggregator_v1"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
drift = { version = "2.81.0", path = "../drift", features = ["cpi"] }
solana-program = "1.18.14"
